KNl-715 use Long.valueOf
git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@92106 66ffb92e-73f9-0310-93c1-f5514f145a0a